--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -22,6 +22,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ShareMyLocation"
+            android:label="@string/title_activity_share_my_location" >
+        </activity>
+        <activity
+            android:name=".Emergency"
+            android:label="@string/title_activity_emergency" >
+        </activity>
+        <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
