--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
     <application
@@ -24,14 +24,17 @@
         </activity>
         <activity
             android:name=".ShareMyLocation"
+            android:parentActivityName="com.seecondev.seecon.MainActivity" 
             android:label="@string/title_activity_share_my_location" >
         </activity>
         <activity
             android:name=".Emergency"
+            android:parentActivityName="com.seecondev.seecon.MainActivity" 
             android:label="@string/title_activity_emergency" >
         </activity>
         <activity
             android:name=".Settings"
+            android:parentActivityName="com.seecondev.seecon.MainActivity" 
             android:label="@string/title_activity_settings" >
         </activity>
     </application>
