--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,10 +5,10 @@
     android:versionName="1.0" >
     
     <permission
-        android:name="com.seecondev.googlemapsv2.permission.MAPS_RECEIVE"
+        android:name="com.seecondev.seecon.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
  
-    <uses-permission android:name="com.seecondev.googlemapsv2.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.seecondev.seecon.permission.MAPS_RECEIVE" />
  
 
     <uses-sdk
@@ -21,18 +21,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- Required to show current location -->
+    <!-- The following two permissions are not required to use
+     Google Maps Android API v2, but are recommended. -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     
     <uses-permission android:name="android.permission.INTERNET"/>
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-<!-- The following two permissions are not required to use
-     Google Maps Android API v2, but are recommended. -->
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
