--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -28,6 +28,8 @@
      The following two permissions are not required to use
      Google Maps Android API v2, but are recommended.
     -->
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
