prettier marker, less frequent updates, new confirmation message, etc :dolphin:

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,6 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -72,6 +71,9 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyC0N5aNbLqyc2YPtVNsO4zpp37MOIfUmWU" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAB8q2duqbnRA2PRb0q6iPHssdvUtPOhWQ" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
