--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,12 +68,14 @@
         </activity>
 
         <!-- Google API Key -->
+        <!-- Katie's Key -->
+        <!--  <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyC0N5aNbLqyc2YPtVNsO4zpp37MOIfUmWU" />-->
+        <!-- Jeff's Key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyC0N5aNbLqyc2YPtVNsO4zpp37MOIfUmWU" />
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAB8q2duqbnRA2PRb0q6iPHssdvUtPOhWQ" />
+            android:value="AIzaSyBUAm0Z-eh_tEh7G2LrDGvUlmh2u4cnh8s" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
