--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -70,23 +70,25 @@
         <!-- Google API Key -->
         <!-- Katie's Key -->
 
-              <meta-data
+        <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyC0N5aNbLqyc2YPtVNsO4zpp37MOIfUmWU" />
+            android:value="AIzaSyCLH0c5u2sd4i-bU8MCsCHkljOlmx9J_Fg" />
 
-        <!-- Jeff's Key 
+        <!--
+        Jeff's Key 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBUAm0Z-eh_tEh7G2LrDGvUlmh2u4cnh8s" />
-		-->
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".GetSettings"
-            android:theme="@style/settingsPreferenceTheme"
-            android:label="@string/title_activity_get_settings" >
+            android:name=".Preferences"
+            android:label="@string/title_activity_get_settings"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/settingsPreferenceTheme" >
         </activity>
     </application>
 
