--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity
             android:name=".Emergency"
             android:label="@string/title_activity_emergency"
+            android:windowSoftInputMode="adjustPan|adjustResize"
             android:parentActivityName=".MainActivity" >
         </activity>
         <activity
