--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,13 +56,11 @@
             android:label="@string/title_activity_share_my_location"
             android:parentActivityName=".MainActivity" >
         </activity>
-        
         <activity
             android:name=".EmergencyContacts"
             android:label="Select Emergency Contacts"
             android:parentActivityName=".MainActivity" >
         </activity>
-        
         <activity
             android:name=".Emergency"
             android:label="@string/title_activity_emergency"
@@ -79,12 +77,13 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCLH0c5u2sd4i-bU8MCsCHkljOlmx9J_Fg" />
-		
-        <!-- Jeff's Key 
+
+        <!--
+        Jeff's Key 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBUAm0Z-eh_tEh7G2LrDGvUlmh2u4cnh8s" />
-        		-->
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -93,6 +92,10 @@
             android:name=".Preferences"
             android:label="@string/title_activity_get_settings"
             android:theme="@style/settingsPreferenceTheme" >
+        </activity>
+        <activity
+            android:name=".GestureConfirmation"
+            android:label="@string/title_activity_gesture_confirmation" >
         </activity>
     </application>
 
