:snowflake: revamped the whole contact list thing... resolves #59, resolves #57

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -98,7 +98,7 @@
             android:label="@string/title_activity_gesture_confirmation" >
         </activity>
         <activity
-            android:name=".ShareLocationContacts"
+            android:name=".ContactList"
             android:label="@string/title_activity_share_location_contacts" >
         </activity>
     </application>
