--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.geobeacondev.geobeacon.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
