--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:theme="@style/MainTheme"
             android:name="com.geobeacondev.geobeacon.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
@@ -53,6 +54,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:theme="@style/ShareMyLocationTheme"
             android:name="com.geobeacondev.geobeacon.ShareMyLocation"
             android:label="@string/title_activity_share_my_location"
             android:parentActivityName="com.geobeacondev.geobeacon.MainActivity" >
@@ -63,6 +65,7 @@
             android:parentActivityName="com.geobeacondev.geobeacon.MainActivity" >
         </activity>
         <activity
+            android:theme="@style/EmergencyTheme"
             android:name="com.geobeacondev.geobeacon.Emergency"
             android:label="@string/title_activity_emergency"
             android:parentActivityName="com.geobeacondev.geobeacon.MainActivity" >
