--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/geo_icon"
+        android:icon="@drawable/geobeacon_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
