--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -73,17 +73,17 @@
         </activity>
 
         <!-- Google API Key -->
-        <!-- Katie's Key -->
+        <!-- Katie's Key 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyC7BgXoxmLVPUEXuL4YY5KrA3yXu6g-uBQ" />
-
+		-->
         <!--
-        Jeff's Key 
+        Jeff's Key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBUAm0Z-eh_tEh7G2LrDGvUlmh2u4cnh8s" />
-        -->
+            android:value="AIzaSyCPfRZIO1LKY4lBpRaibPIbmZ11YR5-Ih0" />
+        
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
